<resources>
    <string name="app_name">YouTube_RD</string>
    <string name="textview">TextView</string>
    <string name="coverimageofvideo">CoverImageOfVideo</string>
    <string name="channelname">ChannelName</string>
    <string name="thumbnail">Tumbnail</string>
    <string name="bottomView">TextView</string>
    <string name="course_imageView">TODO</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="CourseImageView">TODO</string>
    <string name="coursetitle">courseTitle</string>
    <string name="lessionlbl">LessionLbl</string>
</resources>
