<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/VideoCoverImage" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:contentDescription="@string/coverimageofvideo"
            app:layout_constraintBottom_toTopOf="@+id/videlTitle" app:layout_constraintDimensionRatio="w,16:9"/>
    <TextView
            android:text="@string/textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/videlTitle"
            app:layout_constraintTop_toBottomOf="@+id/VideoCoverImage"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/authorThumbnail" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" android:textStyle="bold" android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/channelName"/>
    <TextView
            android:text="@string/channelname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/channelName"
            app:layout_constraintStart_toEndOf="@+id/authorThumbnail"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/videlTitle"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp"/>
    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp" app:srcCompat="@drawable/ic_launcher_foreground"
            android:id="@+id/authorThumbnail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/VideoCoverImage"
            android:contentDescription="@string/thumbnail" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/bottomView"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/channelName" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:background="@android:color/darker_gray"
            android:paddingBottom="16dp"/>
</android.support.constraint.ConstraintLayout>
