<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <ImageView
            android:layout_width="140dp"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/CourseImageView"/>
    <TextView
            android:text="@string/coursetitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/lessionlbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
</android.support.constraint.ConstraintLayout>
